# LEIC

./: .gitignore  .i-banco.c.swp  A004.tex  A60-secrets.txt  CMakeLists.txt  CS.py  Makefile  README.md  README.txt  Relatório.docx  bower.json  btree.c  btree.h  btreehashtable.c  btreehashtable.h  commandlinereader.c  common.py  compile.sh  contas.c  contas.h  contas.h.gch  deploy.sh  gr8_scanner.l  gulpfile.js  hash.c  hash.h  hashtagst.c  hashtagst.h  i-banco  i-banco-sim-401179.txt  i-banco-sim-8967.txt  i-banco-terminal.c  i-banco.c  i-banco.h  item.c  item.h  jogo_fig1.txt  jogo_teste.txt  list.c  list.h  (+37 more)
P1/: classsol.py  testclasssol.py  words.txt  wordsclass2.npy
P2/: regress2.npy  regsol.py  testregsol.py
P3/: RLsol.py  fmdp1.pkl  fmdp2.pkl  testRLsol.py  traj1.pkl
analysis_and_synthesis_of_algorithms/project1/: compile_result.py  profile.sh
analysis_and_synthesis_of_algorithms/project2/: .gitignore  CMakeLists.txt  results1.data  results2.data
ast/: address_of_node.h  block_node.h  evaluation_node.h  function_declaration_node.h  if_else_node.h  if_node.h  null_node.h  return_node.h
binas-ws/: pom.xml  readme.txt
binas-ws-cli/: pom.xml  readme.txt
compilers/: gr8_parser.y
compilers/ast/: again_node.h  function_call_node.h  function_definition_node.h  identity_node.h  indexation_node.h  objects_node.h  post_node.h  read_node.h  stop_node.h  sweep_node.h  tweet_node.h  variable_declaration_node.h
compilers/targets/: function_peeker.h  postfix_target.h  postfix_writer.h  symbol.cpp  type_checker.h
compilers/tests/: .gitignore  A-01-1-N-ok.gr8  A-02-2-N-ok.gr8  A-03-3-N-ok.gr8  A-06-6-N-ok.gr8  A-07-7-N-ok.gr8  A-08-8-N-ok.gr8  B-05-13-N-ok.gr8  B-06-14-N-ok.gr8  B-07-15-N-ok.gr8  B-10-18-N-ok.gr8  B-11-19-N-ok.gr8  B-16-24-N-ok.gr8  B-17-25-N-ok.gr8  B-21-27-N-ok.gr8  B-22-28-N-ok.gr8  B-24-30-N-ok.gr8  C-01-32-N-ok.gr8  C-02-33-N-ok.gr8  C-03-34-N-ok.gr8  C-04-35-N-ok.gr8  C-09-40-N-ok.gr8  C-13-44-N-ok.gr8  C-15-46-N-ok.gr8  C-19-48-N-ok.gr8  D-01-50-N-ok.gr8  E-02-54-N-ok.gr8  E-08-60-N-ok.gr8  E-09-61-N-ok.gr8  E-10-62-N-ok.gr8  E-11-63-N-ok.gr8  J-01-66-N-ok.gr8  J-02-67-N-ok.gr8  J-07-72-N-ok.gr8  J-08-73-N-ok.gr8  K-02-76-N-ok.gr8  K-06-80-N-ok.gr8  K-07-81-N-ok.gr8  K-08-82-N-ok.gr8  K-09-83-N-ok.gr8  (+26 more)
computer_graphics/: timesheet_2.xlsx
computer_networks/: README.txt
computer_networks/src/: WS.py
computer_networks/tests/: file_100K.txt  test1.txt
databases/e2/: entrega2.aux  entrega2.tex
distributed_systems/: pom.xml  tmux.yaml
e2/: entrega2.sql
e3/: populate.sql  queries.sql  relatorio37.tex  schema.sql
e4/: dataAnalytic.sql  index1.sql  index2.sql  multidim.sql  report.aux  report.tex  ri.sql
human_computer_interaction/: package.json
introduction_to_computer_architecture/: README.md  compile.bat
logic_for_programming/: avaliacao_alunos.pl  testes_projeto.pl
operating_systems/: contas.h  i-banco-terminal.c  i-banco.h
src/: CS.py  WS.py  common.py  index.html  main.py  profile.py  socket_utils.py  table.html  user.py
station-ws/: pom.xml  readme.txt
station-ws-cli/: pom.xml  readme.txt
targets/: basic_ast_visitor.h  function_peeker.cpp  postfix_writer.cpp  symbol.h  type_checker.cpp  xml_writer.cpp  xml_writer.h
tests/: A-04-4-N-ok.gr8  A-05-5-N-ok.gr8  B-01-9-N-ok.gr8  B-02-10-N-ok.gr8  B-03-11-N-ok.gr8  B-04-12-N-ok.gr8  B-08-16-N-ok.gr8  B-09-17-N-ok.gr8  B-12-20-N-ok.gr8  B-13-21-N-ok.gr8  B-14-22-N-ok.gr8  B-15-23-N-ok.gr8  B-25-31-N-ok.gr8  C-05-36-N-ok.gr8  C-06-37-N-ok.gr8  C-07-38-N-ok.gr8  C-08-39-N-ok.gr8  C-10-41-N-ok.gr8  C-11-42-N-ok.gr8  C-12-43-N-ok.gr8  C-14-45-N-ok.gr8  C-16-47-N-ok.gr8  C-20-49-N-ok.gr8  D-02-51-N-ok.gr8  D-03-52-N-ok.gr8  E-01-53-N-ok.gr8  E-03-55-N-ok.gr8  E-04-56-N-ok.gr8  E-05-57-N-ok.gr8  E-06-58-N-ok.gr8  E-07-59-N-ok.gr8  F-01-64-N-ok.gr8  F-02-65-N-ok.gr8  J-03-68-N-ok.gr8  J-04-69-N-ok.gr8  J-05-70-N-ok.gr8  J-06-71-N-ok.gr8  K-01-75-N-ok.gr8  K-03-77-N-ok.gr8  K-04-78-N-ok.gr8  (+56 more)
ws-handlers/: pom.xml
(+211 files in other folders)
